Fixes for positioning and spacing

--- a/themes/san-diego/source/styles/_contact-modal.scss
+++ b/themes/san-diego/source/styles/_contact-modal.scss
@@ -226,7 +226,7 @@
                 
                 @media (max-width: 768px) {
                     font-size: var(--font-size-xs);
-                    margin-bottom: 2px;
+                    margin-bottom: 0;
                 }
             }
             
@@ -238,7 +238,7 @@
                 
                 @media (max-width: 768px) {
                     font-size: var(--font-size-xs);
-                    margin-top: 2px;
+                    margin-top: 0;
                 }
             }
             
